empleado y doctor
TODO: admin y recep
tmabien interfaces