@@ -10,15 +10,18 @@ import java.util.stream.Collectors;
 @Component
 public class DoctorAssembler {
     public DoctorDto toDto(Doctor doctor) {
+        if (doctor == null) return null;
+
         return new DoctorDto(
                 doctor.getIdDoctor().obtenerid(),
-                doctor.getNombreCompleto().nombre(),
-                doctor.getNombreCompleto().apellido(),
+                doctor.getIdEmpleado().obtenerid(),
+                doctor.getNombreCompleto().completar(),
                 doctor.getCmp(),
                 doctor.getConsultorio(),
-                doctor.getEspecialidades().stream()
-                        .map(Especialidad::nom_espe)
-                        .toList()
+                doctor.getEspecialidades()
+                        .stream()
+                        .map(e -> e.nom_espe())
+                        .collect(Collectors.toList())
         );
     }
 }
