@@ -5,10 +5,10 @@ import com.Clinica1.myApp.appointments.infraestructure.persistence.jpa.entity.No
 import com.Clinica1.myApp.mantenimiento.domain.model.aggregates.Doctor;
 import com.Clinica1.myApp.mantenimiento.domain.model.valueobjects.Especialidad;
 
+import com.Clinica1.myApp.mantenimiento.domain.model.valueobjects.Nombrecompleto;
 import com.Clinica1.myApp.mantenimiento.infraestructure.persistence.jpa.entity.DoctorEntity;
 import org.springframework.stereotype.Component;
 
-import java.lang.reflect.Field;
 import java.util.List;
 import java.util.stream.Collectors;
 @Component
@@ -17,28 +17,21 @@ public class DoctorMapper {
     public Doctor toDomain(DoctorEntity entity) {
         if (entity == null) return null;
 
-        try {
-            List<Especialidad> especialidades = entity.getEspecialidades().stream()
-                    .map(e -> new Especialidad(e.getNom_espe()))
-                    .collect(Collectors.toList());
+        List<Especialidad> especialidades = entity.getEspecialidades().stream()
+                .map(e -> new Especialidad(e.getNom_espe()))
+                .toList();
 
-            Doctor doctor = Doctor.crear(
-                    IDEntidad.astring(entity.getIdEmpleado()),
-                    entity.getNombreCompleto().getNombre(),
-                    entity.getNombreCompleto().getApellido(),
-                    entity.getCmp(),
-                    entity.getConsultorio(),
-                    especialidades
-            );
-
-            // Setear el ID real
-            setPrivateField(doctor, "idDoctor", IDEntidad.astring(entity.getIdDoctor()));
-
-            return doctor;
-
-        } catch (Exception e) {
-            throw new RuntimeException("Error al mapear DoctorEntity a Doctor: " + e.getMessage(), e);
-        }
+        return Doctor.reconstruir(
+                IDEntidad.astring(entity.getIdDoctor()),
+                IDEntidad.astring(entity.getIdEmpleado()),
+                new Nombrecompleto(
+                        entity.getNombreCompleto().getNombre(),
+                        entity.getNombreCompleto().getApellido()
+                ),
+                entity.getCmp(),
+                entity.getConsultorio(),
+                especialidades
+        );
     }
 
     public DoctorEntity toEntity(Doctor doctor) {
@@ -49,13 +42,11 @@ public class DoctorMapper {
                 .apellido(doctor.getNombreCompleto().apellido())
                 .build();
 
-        List<String> especialidadesStr = doctor.getEspecialidades().stream()
-                .map(Especialidad::nom_espe)
-                .collect(Collectors.toList());
-
-        List<EspecialidadEmbeddable> especialidades = especialidadesStr.stream()
-                .map(nombre -> EspecialidadEmbeddable.builder().nom_espe(nombre).build())
-                .collect(Collectors.toList());
+        List<EspecialidadEmbeddable> especialidades = doctor.getEspecialidades().stream()
+                .map(e -> EspecialidadEmbeddable.builder()
+                        .nom_espe(e.nom_espe())
+                        .build())
+                .toList();
 
         return DoctorEntity.builder()
                 .idDoctor(doctor.getIdDoctor().obtenerid())
@@ -67,9 +58,4 @@ public class DoctorMapper {
                 .build();
     }
 
-    private void setPrivateField(Object target, String fieldName, Object value) throws Exception {
-        Field field = target.getClass().getDeclaredField(fieldName);
-        field.setAccessible(true);
-        field.set(target, value);
-    }
 }
